# serializer version: 1
# name: test_job_application_state_badge_oob_swap
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-info" hx-swap-oob="true">Nouvelle candidature</span>'
# ---
# name: test_job_application_state_badge_processing[accepted]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-success">Candidature acceptée</span>'
# ---
# name: test_job_application_state_badge_processing[cancelled]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-primary">Embauche annulée</span>'
# ---
# name: test_job_application_state_badge_processing[new]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-info">Nouvelle candidature</span>'
# ---
# name: test_job_application_state_badge_processing[obsolete]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-primary">Embauché ailleurs</span>'
# ---
# name: test_job_application_state_badge_processing[postponed]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-accent-03 text-primary">Candidature en liste d\'attente</span>'
# ---
# name: test_job_application_state_badge_processing[prior_to_hire]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-accent-02 text-primary">Action préalable à l’embauche</span>'
# ---
# name: test_job_application_state_badge_processing[processing]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-accent-03 text-primary">Candidature à l\'étude</span>'
# ---
# name: test_job_application_state_badge_processing[refused]
  '<span id="state_00000000-0000-0000-0000-000000000000" class="badge badge-sm badge-pill text-wrap mb-1 badge-danger">Candidature déclinée</span>'
# ---
